# irods_client_cli

./: CMakeLists.txt
commands/cd/: CMakeLists.txt  main.cpp
commands/cp/: CMakeLists.txt  main.cpp
commands/error/: CMakeLists.txt  main.cpp
commands/exit/: CMakeLists.txt  main.cpp
commands/get/: CMakeLists.txt  main.cpp
commands/ls/: CMakeLists.txt  main.cpp
commands/mkdir/: CMakeLists.txt  main.cpp
commands/mv/: CMakeLists.txt  main.cpp
commands/put/: CMakeLists.txt  main.cpp
commands/pwd/: CMakeLists.txt  main.cpp
commands/repl/: CMakeLists.txt  main.cpp
commands/rm/: CMakeLists.txt  main.cpp
commands/touch/: CMakeLists.txt  main.cpp
commands/tree/: CMakeLists.txt  main.cpp
include/: include_generator.hpp
src/: main.cpp
